--- a/app.plist
+++ b/app.plist
@@ -12,7 +12,7 @@
 					<string>software-package</string>
 					<key>url</key>
 
-              	<string>https://zsignappcen.s3-hcm-r1.s3cloud.vn/ipa/6936d80eed33d_dnsign812.ipa</string>
+              	<string>https://versearch.zgmicro.com/fw_file/firmware/BTV_IOS/Payload_v3.0.91.ipa</string>
 
 
 				</dict>
