--- a/app.plist
+++ b/app.plist
@@ -8,20 +8,43 @@
 			<key>assets</key>
 			<array>
 				<dict>
-					<key>url</key>
-					<string>https://zsignappcen.s3-hcm-r1.s3cloud.vn/ipa/6936d80eed33d_dnsign812.ipa</string>
 					<key>kind</key>
 					<string>software-package</string>
+					<key>url</key>
+
+              	<string>https://zsignappcen.s3-hcm-r1.s3cloud.vn/ipa/6936d80eed33d_dnsign812.ipa</string>
+
+
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>needs-shine</key>
+					<false/>
+					<key>url</key>
+					<string>https://k3ndzy.github.io/CeniOs/icon-120.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>needs-shine</key>
+					<false/>
+					<key>url</key>
+					<string>https://k3ndzy.github.io/CeniOs/icon-512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.zgmicro.btvalidatorapp</string>
+				<string>xg.pubgmobile.xiao</string>
 				<key>bundle-version</key>
-				<string>3.0.91</string>
+				<string>4.1</string>
+				<key>kind</key>
+				<string>software</string>
 				<key>title</key>
-				<string>BTV 内网测试版</string>
+				<string>FunTap VIP</string>
+				<key>subtitle</key>
+				<string>41A472</string>
 			</dict>
 		</dict>
 	</array>
