--- a/app.plist
+++ b/app.plist
@@ -22,6 +22,8 @@
 				<string>4.1</string>
 				<key>kind</key>
 				<string>software</string>
+				<key>title</key>
+				<string>FunTap VIP</string>
 			</dict>
 		</dict>
 	</array>
